--- a/loops.html
+++ b/loops.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="loops.js" defer></script>
 </head>
 <body>
     <h1>Loops and strings</h1>
+    <p id="num1"></p>
 </body>
 </html>
