--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 
     <hr><br>
 
-<!--for length property of js-->
-    <p id="length"></p>
+    <!-- for length property of js-->
+    <details><p>string length:</p><p id="length"></p></details>   <!--simple one line dropdown -->
+    
 
 <!--charAt method to get a character in a certian position in a string-->
 <p id="charat"></p>
@@ -25,10 +26,11 @@
 <p id="texxt"></p>
 
 <!--at() for extracting a character-->
-
+<p>test2</p>
 <p id="rand"></p>
 
 <!--string.slice method for extracting a part of string-->
+<p>test 3</p>
 <p id="tesst"></p>
 
 <hr><br>
